--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@angular/compiler": "2.0.0-rc.4",
     "@angular/core": "2.0.0-rc.4",
     "@angular/forms": "0.2.0",
-    "@angular/platform-browser": "2.0.0-rc.4",
     "@angular/http": "2.0.0-rc.4",
+    "@angular/platform-browser": "2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "@angular/router": "3.0.0-alpha.8",
     "angular2-meteor": "0.6.2",
@@ -24,6 +24,10 @@
     "angular2-meteor-polyfills": "0.1.1",
     "angular2-meteor-tests-polyfills": "0.0.2",
     "es6-shim": "0.35.1",
+    "google-auth-library": "https://registry.npmjs.org/google-auth-library/-/google-auth-library-0.9.8.tgz",
+    "google-spreadsheets": "^0.5.1",
+    "googleapis": "^12.4.0",
+    "is-property": "^1.0.2",
     "meteor-node-stubs": "0.2.3",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
