--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "googleapis": "^12.4.0",
     "is-property": "^1.0.2",
     "meteor-node-stubs": "0.2.3",
+    "moment": "^2.15.0",
     "play-sound": "0.0.9",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
